@startuml DCD
title MVVM DCD 

hide circle
skinparam classAttributeIconSize 0

package "View" {
  class LoginWindow  {
    -viewModel: LoginViewModel
    +<<constructor>>LoginWindow()
    +performLogin(): void
    +showError(msg: String): void
    +updatePasswordPlaceholder(): void
  }

  class MainWindow {
    -viewModel: MainWindowViewModel
    +<<constructor>>MainWindow()
    +<<constructor>>MainWindow(employeeId: String)
  }

class KaliberIDInputWindow  {
    +CaliberId: String {readOnly}
    +<<constructor>>KaliberIDInputWindow()
    +TextBox_TextChanged(sender: Object, e: Object): void
    +TextBox_GotFocus(sender: Object, e: Object): void
    +TextBox_LostFocus(sender: Object, e: Object): void
    +TextBox_KeyDown(sender: Object, e: Object): void
    +submitCaliberId(): void
}

  class CreateTrackingSlipView  {
    -viewModel: CreateTrackingSlipViewModel
    +<<constructor>>CreateTrackingSlipView()
    +bind(): void
    +render(): void
    +showError(msg: String): void
    +clearError(): void
  }
  class RemarkInputWindow {
    +Remark: String {readOnly}
    +<<constructor>>RemarkInputWindow()
    +TextBox_TextChanged(sender: Object, e: Object): void
    +TextBox_GotFocus(sender: Object, e: Object): void
    +TextBox_LostFocus(sender: Object, e: Object): void
    +TextBox_KeyDown(sender: Object, e: Object): void
    +submitRemark(): void
  }
}

package "ViewModel" {
  class LoginViewModel  {
    +UserId: String
    +Password: String
    +ErrorMessage: String
    +PropertyChanged: Object

    +<<constructor>>LoginViewModel()
    +ValidateLogin(userId: String, password: String): boolean
    -HashPassword(password: String): String
    #OnPropertyChanged(propertyName: String = null): void
  }

  class MainWindowViewModel  {
    +EmployeeId: String
    +Title: String
    +WelcomeText: String {readOnly}
    
    +<<constructor>>MainWindowViewModel()
    +<<constructor>>MainWindowViewModel(employeeId: String)
    #OnPropertyChanged(propertyName: String = null): void
  }

  class KaliberIDInputViewModel  {
    +EnteredID: String
    --
    +<<constructor>>KaliberIDInputViewModel()
    +Validate(): boolean
  }

  class CreateTrackingSlipViewModel  {
    +selectedStationID: int
    +startDate: DateTime
    +status: boolean
    -errorMessage: String

    +<<constructor>>CreateTrackingSlipViewModel()
    +createTrackingSlip(): void
    +loadStations(): void
    +getStations(): List<Station>
    +setError(message: String): void
    +clearError(): void
    -validateInput(): boolean
  }
  class RemarkInputViewModel {
    +EnteredRemark: String
    +<<constructor>>RemarkInputViewModel()
    +Validate(): boolean
  }
}

package "Model" {
  interface ITrackingSlipRepository {
    +GetById(id: String): CaliberTrackingSlip
    +GetAll(): List<CaliberTrackingSlip>
    +GetByLocation(location: String): List<CaliberTrackingSlip>
    +GetHistory(trackingSlipId: String): List<History>
    +Add(slip: CaliberTrackingSlip): void
    +Exists(id: String): boolean
  }

  interface IStationRepository {
    +GetAll(): List<Station>
    +GetById(id: int): Station
    +GetByName(name: String): List<Station>
  }

  interface IEmployeeRepository {
    +GetById(id: int): Employee
    +GetAll(): List<Employee>
    +GetByName(name: String): List<Employee>
    +GetByStation(stationId: int): List<Employee>
    +Add(employee: Employee): void
  }

  interface ILoginAuthenticator {
    +Authenticate(userId: String, password: String): boolean
  }

  class CaliberTrackingSlip  {
    +ID: String
    +StartDate: DateTime
    +Status: boolean
    + History: List<Station>

    +<<constructor>>CaliberTrackingSlip(id: String, start: DateTime, status: TrackingSlipStatus)
    +addHistory(h: Station): void
    +getLatestHistory(): Station
    +setStatus(status: boolean): void
    +isActive(): boolean
    +moveToStation(station: Station): void
  }

  class Employee  {
    +ID: int
    +Name: String

    +<<constructor>>Employee(id: int, name: String)
    +assignTo(station: Station): void
    +isAssignedTo(station: Station): boolean
    +currentStation(): Station
  }

  class Station  {
    +ID: int
    +Name: String
    +StartDate: DateTime
    +EndDate: DateTime
    +Status: String
    +Remark: String
    +BuildingName: String

    +<<constructor>>Station(id: int, name: String)
    +isActive(at: DateTime): boolean
    +fullDisplayName(): String
    +belongsTo(building: Building): boolean
  }

  class Building {
    +Name: String
    +Section: String

    +<<constructor>>Building(name: String, section: String)
    +fullName(): String
  }
}

LoginWindow ..> LoginViewModel 
MainWindow ..> MainWindowViewModel 
KaliberIDInputWindow ..> KaliberIDInputViewModel 
CreateTrackingSlipView ..> CreateTrackingSlipViewModel 
RemarkInputWindow ..> RemarkInputViewModel 

LoginViewModel ..> ILoginAuthenticator : <<uses>>
KaliberIDInputViewModel ..> ITrackingSlipRepository : <<uses>>
CreateTrackingSlipViewModel ..> IStationRepository : <<uses>>
CreateTrackingSlipViewModel ..> ITrackingSlipRepository : <<uses>>
RemarkInputViewModel ..> IStationRepository: <<uses>>

ITrackingSlipRepository ..> CaliberTrackingSlip 
IStationRepository ..> Station
IEmployeeRepository ..> Employee

CaliberTrackingSlip "1" -- "1..*" Station : History-Of
Employee "1..*" -- "1" Station : Assigned-To
Station "1..*" --* "1" Building : Located-In
@enduml
